--- a/app/scss/filters.scss
+++ b/app/scss/filters.scss
@@ -1,12 +1,14 @@
 
 .filters{
 
-  .filter{
+  .filter {
     padding-top:2rem;
     padding-bottom:2rem;
     padding-right:4rem;
     margin-bottom: 1rem;
     margin-right: 1rem;
+
+    
 
     h5{
       font-size: 1.3rem;
@@ -82,6 +84,22 @@
       border-left-color: #ccc;
       right: 1em;
     }
-
+    @include breakpoint(medium) {
+      padding-top: 0;
+      padding-bottom: 0;
+      padding-right: 0;
+      margin-bottom: 0;
+      h5 {
+	padding: 1rem 0 .5rem 0;
+      }
+      
+    }
+  }
+  
+  .filter:last-child .btn {
+    @include breakpoint(medium) {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
   }
 }
